--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 .item2{
     width: 50%;
-    background-color: brown;
+    background-color:red;
     height: 100vh;
 }
 @media (max-width: 376px) {
@@ -25,6 +25,6 @@
     }
     .item2{
         width: 100%;
-        background-color: blueviolet;
+        background-color:yellow;
     }
 }
